--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
-fastapi
-scikit-learn
-uvicorn
-torch
-transformers
-gradio
-flake8
-pytest
-
+# machine learning
+torch>=2.2.0
+torchvision>=0.20.1
+transformers>=4.38.0
+pillow>=11.0.0
+numpy>=1.26.4
+pandas>=2.2.3
+# web framework
+fastapi>=0.109.1
+uvicorn==0.21.1
+python-multipart>=0.0.20
+# tests
+pytest>=8.3.4
+pytest-asyncio>=0.25.0
+PyYAML>=6.0.2
+pydantic>=2.10.4
+httpx>=0.28.1
+setuptools>=75.6.0
+locust>=2.32.5
+# code formatting
+black>=24.3.0
+isort>=5.12.0
